--- a/responsive.css
+++ b/responsive.css
@@ -4,6 +4,10 @@
     flex-direction: column;
   }
 
+  .mainTxt {
+    margin: 0% 10% 0% 10% !important;
+  }
+
   .mainTxt:hover {
     font-size: 100%;
   }
@@ -18,8 +22,16 @@
   }
   
   .pageTxt {
-    margin: 0% 10% 0% 10%;
+    margin: 0% 10% 0% 10% !important;
     font-size: large;
+  }
+
+  .projectTxt {
+    margin: 0%;
+  }
+
+  .pageTxtForm {
+    margin: 0%;
   }
 
   .txtPageProjects {
@@ -44,6 +56,7 @@
 
   .menuPictureBox {
     align-items: flex-start;
+    flex: 0;
   }
 
   .nav-main {
@@ -58,5 +71,20 @@
     gap: 5px;
     justify-items: center;
   }
+  .socialsArrow {
+    display: none;
+  }
+  .musicText {
+    position: fixed;
+    bottom: 3%;
+  }
+}
 
+@media (max-width: 1280px) {
+  .mainTxt {
+    margin: 0% 10% 0% 10% !important;
+  }
+  .pageTxt {
+    margin: 0% 10% 0% 10% !important;
+  }
 }
